objects/Search_Result__c.object
<CustomObject>
    <fields>
        <fullName>Account_Name__c</fullName>
        <formula>User__r.Contact.Account.Name</formula>
        <label>Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Searched__c</fullName>
        <label>Date Searched</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <formula>User__r.Email</formula>
        <label>Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Search_Keyword__c</fullName>
        <label>Search Keyword</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ShortName__c</fullName>
        <label>ShortName</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Name__c</fullName>
        <label>User</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Search_Result</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Search Keyword</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Account_Name__c</columns>
        <columns>Date_Searched__c</columns>
        <columns>Email__c</columns>
        <columns>Search_Keyword__c</columns>
        <columns>ShortName__c</columns>
        <columns>User__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>lessThan</operation>
        </filters>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>SR-{00000000}</displayFormat>
        <label>Search Result Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Search Keywords</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>